--- a/css/index.css
+++ b/css/index.css
@@ -314,7 +314,7 @@ body{
 	border-radius: 50%;
 	float: left;
 	margin: 0 5px;
-	border: 2px solid #6D6D6D;
+	border: 2px solid #DDDBDC;
 	box-sizing: border-box;
 }
 .dot:hover{
@@ -632,18 +632,20 @@ body{
 	background: #E83632;
 	text-align: center;
 	line-height: 22px;
-	font-size: 12px;
+	font-size: 14px;
 	color: #FFFFFF;
 	float: left;
+	font-weight: 800;
 }
 .JDSpike-box-much-right{
 	width: 80px;
 	height: 100%;
 	text-align: center;
 	line-height: 22px;
-	font-size: 12px;
+	font-size: 14px;
 	color: #b7bcb8;
 	float: left;
+	font-weight: 800;
 	border: 1px solid #E83632;
 	box-sizing: border-box;
 	overflow: hidden;
@@ -746,7 +748,6 @@ body{
 	height: 80px;
 }
 .JDRanking-box-banner-one-img img{
-	width: 100%;
 	height: 100%;
 }
 .JDRanking-box-banner-one-num{
@@ -760,6 +761,8 @@ body{
 	font-size: 12px;
 	color: #333;
 	margin-left: 12px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .JDRanking-box-hengxian{
 	width: 350px;
@@ -792,11 +795,109 @@ body{
 	box-sizing: border-box;
 	background: #ffffff;
 }
-.JDRanking-box-imgbanner{
-	width: 350px;
+.JDRanking-box-coupon{
+	width: 100%;
 	height: 355px;
-	background: url(../img/好货背景.png) no-repeat;
-	background-size: 100%;
+	padding: 0 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.JDRanking-box-coupon-box{
+	width: 350px;
+	height: 118px;
+	background: #F6F6F6;
+	position: relative;
+	overflow: hidden;
+}
+.JDRanking-box-coupon-box:nth-child(2){
+	background: #EEEFED;
+}
+.JDRanking-box-coupon-box-img{
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	margin-top: 19px;
+	margin-left: 10px;
+	margin-right: 10px;
+	float: left;
+}
+.JDRanking-box-coupon-box-img img{
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+}
+.JDRanking-box-coupon-box-text{
+	width: 168px;
+	height: 101px;
+	padding-top: 15px;
+	box-sizing: border-box;
+	overflow: hidden;
+	float: left;
+}
+.JDRanking-box-coupon-box-text-one{
+	width: 100%;
+	height: 38px;
+	color: #E33333;
+}
+.JDRanking-box-coupon-box-text-one i{
+	font-size: 16px;
+	margin-right: 3px;
+	font-weight: 400;
+	line-height: 38px;
+}
+.JDRanking-box-coupon-box-text-one span{
+	font-size: 34px;
+	font-weight: 900;
+}
+.JDRanking-box-coupon-box-text-two{
+	width: 100%;
+	height: 24px;
+	color: #B1B3B0;
+	line-height: 24px;
+	font-size: 14px;
+}
+.JDRanking-box-coupon-box-text-three{
+	width: 100%;
+	height: 24px;
+	color: #767B77;
+	line-height: 24px;
+	font-size: 14px;
+}
+.JDRanking-box-coupon-box-more{
+	float: right;
+    height: 100%;
+    line-height: 118px;
+    margin-right: 34px;
+    font-size: 12px;
+    color: #333;
+    transition: color ease 0.2s;
+}
+.JDRanking-box-coupon-box-more-inner{
+	display: inline-block;
+    width: 1px;
+    line-height: 15px;
+    vertical-align: middle;
+}
+.JDRanking-box-coupon-box-top{
+	content: '';
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    right: 54px;
+	top: -8px;
+    border-radius: 50%;
+    background: #fff;
+}
+.JDRanking-box-coupon-box-bottom{
+	content: '';
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    right: 54px;
+	bottom: -8px;
+    border-radius: 50%;
+    background: #fff;
 }
 /* 京东排行榜结束 */
 
@@ -891,3 +992,200 @@ body{
 	height: 110px;
 }
 /* 京东寻觅结束 */
+
+/* 只能先锋开始 */
+.JDAIflash-title{
+	width: 1190px;
+	height: 45px;
+	margin: 0 auto;
+}
+.JDAIflash-title-txt{
+	position: relative;
+    width: 150px;
+    height: 45px;
+    font-size: 28px;
+    font-family: 'fzzzh', sans-serif;
+    font-weight: normal;
+    text-align: center;
+    line-height: 45px;
+    padding: 0 50px;
+    margin: 0 auto 20px;
+    overflow: hidden;
+    color: #222;
+}
+.JDAIflash-title-txt:before{
+	content: '';
+    position: absolute;
+    width: 50px;
+    height: 3px;
+    display: block;
+    background: #222;
+    top: 19px;
+	left: 0;
+}
+.JDAIflash-title-txt:after{
+	content: '';
+    position: absolute;
+    width: 50px;
+    height: 3px;
+    display: block;
+    background: #222;
+    top: 19px;
+	right: 0;
+}
+.JDAIflash-box1{
+	width: 1190px;
+	height: 450px;
+	margin: 0 auto;
+	margin-bottom: 30px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.JDAIflash-phone{
+	width: 390px;
+	height: 100%;
+	background: #ffffff;
+}
+.JDAIflash-phone-title{
+	width: 100%;
+	height: 60px;
+	padding: 0 20px;
+	box-sizing: border-box;
+}
+.JDAIflash-phone-title div{
+	line-height: 60px;
+	font-size: 22px;
+	color: #000000;
+	float: left;
+	font-weight: normal;
+	margin-right: 4px;
+}
+.JDAIflash-phone-title i{
+	line-height: 64px;
+	font-size: 22px;
+	color: #E83632;
+	float: left;
+	font-weight: normal;
+}
+.JDAIflash-phone-title span{
+	float: left;
+    font-size: 14px;
+    color: #999;
+    height: 20px;
+    line-height: 40px;
+    margin: 12px 0 0 10px;
+}
+.JDAIflash-phone-img{
+	width: 350px;
+	height: 180px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.JDAIflash-phone-img-mi{
+	width: 170px;
+	height: 100%;
+}
+.JDAIflash-phone-img-mi img{
+	width: 100%;
+	height: 100%;
+}
+.JDAIflash-phone-Manufacturer{
+	width: 351px;
+	height: 179px;
+	margin: 0 auto;
+	margin-top: 10px;
+	background: #F0F3EF;
+	padding: 1px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.JDAIflash-phone-Manufacturer-heng{
+	width: 100%;
+	height: 59px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.JDAIflash-phone-Manufacturer-heng-img{
+	width: 87px;
+	height: 59px;
+}
+.JDAIflash-phone-Manufacturer-heng-img img{
+	width: 100%;
+	height: 100%;
+}
+.JDAIflash-phone-bighuang{
+	width: 350px;
+	height: 370px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.JDAIflash-phone-bighuang img{
+	width: 100%;
+	height: 100%;
+}
+.JDAIflash-phone3{
+	width: 390px;
+	height: 100%;
+	position: relative;
+}
+.JDAIflash-phone3-img{
+	width: 340px;
+	height: 420px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 15;
+}
+.JDAIflash-phone3-img img{
+	width: 100%;
+	height: 100%;
+}
+.JDAIflash-phone3-border{
+    position: absolute;
+    width: 340px;
+    height: 420px;
+    border: solid 5px #333;
+    top: 20px;
+	z-index: 14;
+}
+.JDAIflash-computer{
+	width: 390px;
+	height: 100%;
+	position: relative;
+}
+.JDAIflash-computer-img{
+	width: 380px;
+	height: 200px;
+	position: absolute;
+	right: 0;
+	top: 0px;
+	z-index: 15;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.JDAIflash-computer-img img{
+	width: 100%;
+	height: 100%;
+	margin-bottom: 20px;
+}
+.JDAIflash-computer-border{
+    position: absolute;
+    width: 340px;
+    height: 420px;
+    border: solid 5px #333;
+    top: 20px;
+	z-index: 14;
+}
+.JDAIflash-phone-bighuang-tb{
+	width: 350px;
+	height: 180px;
+}
+/* 只能先锋结束 */
