--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,21 @@ a{
 }
 body{
 	background: #f0f3ef;
+	position: relative;
+}
+.huise{
+	width: 100%;
+	height: 30px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	background: #e3e4e5;
+}
+.soobigbox{
+	width: 1190px;
+	height: 100%;
+	margin: 0 auto;
 }
 /* 京东头部开始 */
 .JDheader-box{
@@ -1214,29 +1229,222 @@ body{
 	width: 100%;
 	height: 100%;
 }
-/* 只能先锋结束 */
-
-/* 企业采购 */
-.enterpriseProcurement{
-	width: 1190px;
-	height: 220px;
-	margin: 0 auto;
+.box-treasure{
+	width: 390px;
+	height: 450px;
 }
-/* 企业采购 */
+.treasure_scene_hd {
+    width: 390px;
+    height: 200px;
+    padding-top: 20px;
+    margin-bottom: 10px;
+    background-color: rgb(255, 255, 255);
+}
+.treasure_scene_hd h4 {
+    width: 350px;
+    color: rgb(34, 34, 34);
+    font-size: 18px;
+    line-height: 18px;
+    margin: auto;
+	font-weight: normal;
+}
+.treasure_scene_hd h4 span{
+	color: #999;
+    font-size: 14px;
+    vertical-align: 1px;
+}
+.treasure_scene_bd {
+    width: 390px;
+    height: 134px;
+    padding-top: 30px;
+    margin-bottom: 10px;
+}
+.treasure_scene_bd > div {
+    width: 130px;
+    height: 130px;
+    float: left;
+    margin: auto 30px;
+}
+.treasure_scene_bd > div img{
+	width: 100%;
+	height: 100%;
+}
+/* 只能先锋结束 */
 
 /* JOY寻宝 */
 .JOYTreasure{
 	width: 1190px;
 	height: 500px;
 	margin: 0 auto;
-}	
+}
+.discovering{
+	width: 1190px;
+	height: 500px;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+.discovering-box{
+	width: 390px;
+	height: 240px;
+	margin: 0 10px 10px 0;
+	background-color: white;
+	float: left;
+}
+.discovering>div:nth-child(3n){
+	margin-right:0 ;
+}
+.discovering-box-top{
+	width: 390px;
+	height: 100px;
+}
+.discovering-img{
+	width: 100%;
+	height: 100%;
+	background-image: url(../img/5adddbc9Ne745ce69%20.jpg);
+	background-size:100% 100%;
+}
+.discovering-img>div{
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	background-color: rgba(0,0,0,0.6);
+	color: white;
+	text-align: center;
+	line-height: 100px;
+}
+.discovering-img>div span{
+	font-weight: 600;
+}
+.discovering2-img{
+	width: 100%;
+	height: 100%;
+	background-image: url(../img/5b87b4d0N4af0655f.jpg);
+	background-size:100% 100%;
+}
+.discovering2-img>div{
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	background-color: rgba(0,0,0,0.6);
+	color: white;
+	text-align: center;
+	line-height: 100px;
+}
+.discovering2-img>div span{
+	font-weight: 600;
+}
+.discovering3-img{
+	width: 100%;
+	height: 100%;
+	background-image: url(../img/5adddbe6Nde882b50.jpg);
+	background-size:100% 100%;
+}
+.discovering3-img>div{
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	background-color: rgba(0,0,0,0.6);
+	color: white;
+	text-align: center;
+	line-height: 100px;
+}
+.discovering3-img>div span{
+	font-weight: 600;
+}
+.discovering4-img{
+	width: 100%;
+	height: 100%;
+	background-image: url(../img/38700b821482ec5c.jpg);
+	background-size:100% 100%;
+}
+.discovering4-img>div{
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	background-color: rgba(0,0,0,0.6);
+	color: white;
+	text-align: center;
+	line-height: 100px;
+}
+.discovering4-img>div span{
+	font-weight: 600;
+}
+.discovering5-img{
+	width: 100%;
+	height: 100%;
+	background-image: url(../img/5b852253Nc2431c84.jpg);
+	background-size:100% 100%;
+}
+.discovering5-img>div{
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	background-color: rgba(0,0,0,0.6);
+	color: white;
+	text-align: center;
+	line-height: 100px;
+}
+.discovering5-img>div span{
+	font-weight: 600;
+}
+.discovering6-img{
+	width: 100%;
+	height: 100%;
+	background-image: url(../img/5addd250N3def2062.jpg);
+	background-size:100% 100%;
+}
+.discovering6-img>div{
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	background-color: rgba(0,0,0,0.6);
+	color: white;
+	text-align: center;
+	line-height: 100px;
+}
+.discovering6-img>div span{
+	font-weight: 600;
+}
+.discovering-box-bottom{
+	width: 360px;
+	height: 110px;
+	margin: 10px 15px 0 15px;
+}
+.discovering-bottom-img{
+	height: 100%;
+	width: 110px;
+	margin: 0 5px;
+	float: left;
+}
+.discovering-bottom-img img{
+	width: 100%;
+	height: 100%;
+}
 /* JOY寻宝 */
 
 /* 特色推荐 */
-.featuredRecommendation{
+.tstj-bigbox{
 	width: 1190px;
 	height: 340px;
 	margin: 0 auto;
+	margin-bottom: 30px;
+	display: flex;
+	flex-flow: row;
+	justify-content: space-between;
+}
+.tstj-bigbox-sbox{
+	width: 390px;
+	height: 340px;
+	background: #ffffff;
+}
+.tstj-bigbox-sbox-img{
+	width: 350px;
+	height: 250px;
+	margin: 0 auto;
+}
+.tstj-bigbox-sbox-img img{
+	width: 100%;
+	height: 100%;
 }
 /* 特色推荐 */
 /* 京东直播 */
@@ -1244,4 +1452,292 @@ body{
 	width: 1190px;
 	height: 455px;
 	margin: 0 auto;
+}
+.streaming{
+	width: 1190px;
+	height: 455px;
+	margin: 0 auto;
+}
+.live{
+	width: 390px;
+	height: 425px;
+	margin: 0 10px 30px 0;
+	background-color:#FFFFFF;
+	float: left;
+	padding: 15px;
+	box-sizing: border-box;
+}
+.streaming>div:nth-child(3){
+	margin-right: 0;
+}
+.live-box{
+	width: 170px;
+	height: 190px;
+	margin: 5px;
+	float: left;
+	background-image: url(../img/baisenaizi.webp);
+	background-size:100% 100%;
+}
+.live-box:nth-child(2){
+	background-image: url(../img/baiguanyin.webp);
+}
+.live-box:nth-child(3){
+	background-image: url(../img/Czhaobei.webp);
+}
+.live-box:nth-child(4){
+	background-image: url(../img/hongselianyiqun.webp);
+}
+.live-box:nth-child(5){
+	background-image: url(../img/feicuiyuzhuo.webp);
+}
+.live-box:nth-child(6){
+	background-image: url(../img/feicuimile.webp);
+}
+.live-box:nth-child(7){
+	background-image: url(../img/eerhaobaiguanyin.webp);
+}
+.live-box:nth-child(8){
+	background-image: url(../img/toumingguanyin.webp);
+}
+.live-box>div{
+	width: 100%;
+	height: 100%;
+	position: relative;
+	background-color: rgba(0,0,0,0.6);
+}
+.live-box>div>div:nth-child(1){
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -22px 0 0 -22px;
+	width: 44px;
+	height: 44px;
+}
+.live-box>div>div:nth-child(2){
+	position: absolute;
+	bottom: 15px;
+	color: white;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	width: 150px;
+	margin: 0 auto;
+	padding-left: 15px;
+	box-sizing: border-box;
+	text-align: center;
+}
+.live2-box{
+	background-image: url(../img/shuangyufeicui.webp);
+	background-size:100% 100%;
+}
+.live2-box>div{
+	width: 100%;
+	height: 100%;
+	position: relative;
+	background-color: rgba(0,0,0,0.6);
+}
+.live2-box>div>div:nth-child(1){
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -30px 0 0 -30px;
+	width: 60px;
+	height: 60px;
+}
+.live2-box>div>div:nth-child(2){
+	position: absolute;
+	bottom: 38px;
+	color: white;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	width: 350px;
+	height: 30px;
+	font-size: 18px;
+	margin: 0 auto;
+	padding-left: 15px;
+	box-sizing: border-box;
+	text-align: center;
+}
+.live2 .live2-box{
+	width: 100%;
+	height: 100%;
+}
 /* 京东直播 */
+
+/* 底部开始 */
+.mod{
+	width: 1190px;
+	height: 42px;
+	margin: 0 auto;
+	padding: 30px 0;
+	border-bottom: 1px dashed #666666;
+}
+.mod>div{
+	width: 180px;
+	height: 42px;
+	padding-left: 45px;
+	margin: 0 36px;
+	line-height: 42px;
+	font-size: 18px;
+	font-weight: 700;
+	position: relative;
+	float: left;
+	color: #444;
+}
+
+.mod-tit{
+	overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 36px;
+    height: 42px;
+    text-indent: -999px;
+	background-repeat: no-repeat;
+    background-position: 0 -192px;
+    background-image: url(../img/lastbigpng.png);
+}
+.kuai .mod-tit{
+	background-position: -41px -192px;
+}
+.hao .mod-tit{
+	background-position: -82px -192px;
+}
+.sheng .mod-tit{
+	background-position: -123px -192px;
+}
+.help{
+	width: 1190px;
+	height: 160px;
+	padding: 20px 0;
+	margin: 0 auto;
+}
+.help-nav{
+	float: left;
+	width: 198px;
+	height: 159px;
+	line-height: 22px;
+}
+.help-nav h5{
+	margin-bottom: 5px;
+	font-size: 14px;
+	font-weight: bold;
+	color: #666;
+	
+}
+.help-nav ul{
+	width: 198px;
+	height: 132px;
+	
+}
+.help-nav li{
+	width: 198px;
+	height: 22px;
+	padding: 0;
+	font-size: 12px;
+	color: #666;
+}
+.help-nav li:hover{
+	color: red;
+	
+}
+.help-nav-last{
+	width: 200px;
+	height: 150px;
+	background-image: url(../img/lastbigpng.png);
+	background-repeat:no-repeat ;
+	background-position:0px 0px ;
+	background-repeat: no-repeat;
+}
+.help-nav-last h5{
+	margin-bottom: 15px;
+	font-size: 14px;
+	text-align: center;
+	color: #666666;
+}
+.help-nav-last-text{
+	width: 180px;
+	height: 73px;
+	padding: 0 10px;
+}
+.help-nav-last-text p{
+	font-size: 12px;
+	color: #666666;
+}
+.help-nav-last-text p:last-child{
+	text-align: right;
+}
+.inner{
+	width: 1190px;
+	height: 234px;
+	margin: 0 auto;
+	padding: 15px 0;
+	border-top: 1px dashed #666;
+	color: #999;
+	
+}
+.inner-top{
+	width: 100%;
+	height: 18px;
+	font-size: 12px;
+	text-align: center;
+	line-height: 18px;
+	color: #666666;
+}
+.inner-top a{
+	color: #999;
+}
+.inner-top a:hover{
+	color: red;
+}
+.inner-top span{
+	margin: 0 10px;
+	color: #CCCCCC;
+}
+.inner-info{
+	width: 1190px;
+	height: 110px;
+	padding: 10px 0;
+	line-height: 22px;
+	text-align: center;
+	font-size: 12px;
+	color: #333;
+}
+.inner-info a{
+	color: #999;
+}
+.inner-info a:hover{
+	color: red;
+}
+.inner-bottom{
+	width: 1190px;
+	height: 36px;
+	margin: 25px 0;
+	display: flex;
+	justify-content: center;
+}
+.inner-bottom-box{
+	overflow: hidden;
+    display: inline-block;
+    margin: 0 3px;
+    width: 103px;
+    height: 32px;
+    line-height: 1000px;
+	background-repeat: no-repeat;
+    background-position: -205px -111px;
+    background-image: url(../img/lastbigpng.png);
+}
+.inner-bottom-box:nth-of-type(2){
+	background-position: -205px -74px;
+}
+.inner-bottom-box:nth-of-type(3){
+	background-position: -205px -37px;
+}
+.inner-bottom-box:nth-of-type(4){
+	background-position: -205px 0px;
+}
+.inner-bottom-box:nth-of-type(5){
+	background-position: 0 -155px;
+}
+/* 底部结束 */
